v0.1, 20-Feb-2012 -- Initial release.

v0.2, --date--
o Add log rotation functionality.  This prevents having to rotate the daemon
  and consequently, re-enter the passphrase.
o Use getpass module instead of raw_input for passphrase prompt.